--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
     display: none;
 }
 
-@media only screen and (max-width:768px) {
+@media only screen and (min-width:577px) and (max-width:768px)
+ {
     .carousel-caption {
         height: auto !important;
     }
@@ -35,5 +36,22 @@ body {
 
     .carsl-heading {
         font-size: 24px !important;
+    }
+}
+@media only screen and (max-width:576px) {
+    .carousel-caption {
+        height: auto !important;
+    }
+
+    .carsl-para {
+        font-size: 1vh !important;
+    }
+
+    .carsl-button {
+        padding: 2px 3px !important;
+    }
+
+    .carsl-heading {
+        font-size: 1.5vh !important;
     }
 }
