medium device carousel caption responsivebess

--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
     }
 }
 
-/* Carousel caption Responsiveness in small device  */
-@media only screen and (min-width:576px) and (max-width:768px) {
+/* Carousel caption Responsiveness in small and medium device  */
+@media only screen and (min-width:576px) and (max-width:992px) {
     .carousel-caption {
         height: auto !important;
     }
